added validation and api integration

--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -25,3 +25,11 @@
     line-height: 17px;
   }
 }
+
+.popup__button_disabled {
+  background: #ffffff;
+  color: #c0c0c0;
+  border: 1px solid #c0c0c0;
+  cursor: default;
+  pointer-events: none;
+}
